# metadoc

./: Cargo.toml  readme.md
metadoc/: Cargo.toml
metadoc-derive/: Cargo.toml
metadoc-derive/src/: lib.rs
metadoc-example/: Cargo.toml
metadoc-example/src/: main.rs
metadoc-example/src/metrics/: doc.rs  example.rs  mod.rs
metadoc-example/src/templates/: metric.html
metadoc/src/: lib.rs
metadoc/tests/: alias.rs  containers.rs  custom.rs  default.rs  enums.rs  propagation.rs  serde.rs  simple.rs
