[package]
name = "metadoc-example"
version = "0.1.0"
edition = "2024"
license = "MIT"
categories = ["rust-patterns", "config"]
description = "Example of using struct-metadata."

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
metadoc = { version = "0.1.0", features = [
    "serde",
], path = "../metadoc", optional = true }
minijinja = { version = "2.8.0", optional = true }
minijinja-embed = { version = "2.8.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["metric-docs"]
metric-docs = [
    "dep:metadoc",
    "dep:minijinja",
    "dep:minijinja-embed",
    "dep:serde",
]

[dev-dependencies]

[build-dependencies]
minijinja-embed = "2.8.0"
