[package]
name = "metadoc"
version = "0.1.0"
edition = "2024"
license = "MIT"
categories = ["rust-patterns", "config"]
description = "Macros for attaching metadata to structs."

[dependencies]
metadoc-derive = { version = "0.1.0", path = "../metadoc-derive" }
chrono = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["std", "chrono"]
std = []
chrono = ["dep:chrono"]
serde = ["dep:serde"]
serde_json = ["dep:serde_json"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
pretty_assertions = { version = "1.4" }
